fix sidebar's bottom bar on mobile

--- a/packages/augur-simplified/src/modules/sidebar/sidebar.styles.less
+++ b/packages/augur-simplified/src/modules/sidebar/sidebar.styles.less
@@ -109,3 +109,10 @@ div.Sidebar {
     height: calc(100vh - @size-220);
   }
 }
+
+.MobileBrowserTall {
+  > div[class*="Body"] {
+    max-height: calc(100vh - @size-260);
+    height: calc(100vh - @size-260);
+  }
+}
